trunk/Archive2/77/b9faf649bd712f/output
main.cpp:6:20: error: incomplete type 'Environment_Where_sizeof_int_is<3>' used in nested name specifier
 const size_t foo = Environment_Where_sizeof_int_is<3>::foo;
                    ^
